[tool.poetry]
name = "module-web-2-mhw"
version = "0.1.0"
description = ""
authors = ["Олександр <alexander.zhukov.2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "13.7.0"
prompt-toolkit = "3.0.43"
python-dateutil = "2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
